--- a/src/styles.css
+++ b/src/styles.css
@@ -43,6 +43,10 @@ header .logo {
     box-sizing: border-box;
 }
 
+.toggleButton {
+    background: none;
+    border: none;
+}
 
 .menuBurger {
     display: none;
@@ -666,6 +670,10 @@ header .logo {
 
     .menuBurgerClose {
         width: 26px;
+    }
+
+    .menuBurgerClose img{
+        width: 100%;
     }
 
 }
