--- a/src/styles.css
+++ b/src/styles.css
@@ -2,35 +2,6 @@ body {
     margin: 0;
 }
 
-/*
-.header {
-    width: 100%;
-    height: 120px;
-    padding: 50px;
-    box-sizing: border-box;
-}
-
-header .logo {
-    height: 40px;
-    float: left;
-}
-
-.navigation {
-    float: right;
-}
-
-.navigation .list {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-
-.navigation .list li{
-    float: left;
-    padding: 0 15px;
-}
-*/ 
-
 .header {
     position: relative;
     z-index: 10;
@@ -130,6 +101,14 @@ header .logo {
     letter-spacing: 22px;
     margin-top: 170px;
     padding: 0 16px;
+
+    @media (max-width: 1024px) {
+        font-size: 44px;
+        text-align: center;
+        letter-spacing: 8px;
+        margin-top: 100px;
+    }
+    
 }
 
 .arrowImage {
@@ -149,7 +128,7 @@ header .logo {
     justify-content: center;
     box-sizing: border-box;
     width: 50%;
-    background: #fffcf6;
+    background: $backgroundTextContentLight-color;
     padding: 200px; 
 }
 
@@ -476,12 +455,6 @@ header .logo {
 
 
 @media (max-width: 1024px) {
-    .title {
-        font-size: 44px;
-        text-align: center;
-        letter-spacing: 8px;
-        margin-top: 100px;
-    }
 
     .arrowImage {
         height: 120px;
