--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -6,6 +6,7 @@ body {
     margin: 0;
 }
 
+
 .header {
     position: relative;
     z-index: 10;
@@ -14,7 +15,8 @@ body {
     justify-content: space-between;
     width: 100%;
     padding: 30px 40px;
-    background-color: #3ebfff;
+    background-color: map-get($map: $colors, $key: basic-white);
+    background-color: map-get($map: $colors, $key: basic-blue);
     box-sizing: border-box;
 }
 
@@ -27,7 +29,7 @@ body {
         justify-content: space-between;
         width: 100%;
         padding: 30px 40px;
-        background-color: #ffffff;
+        background-color: map-get($map: $colors, $key: basic-white);
         box-sizing: border-box;
     }
 }
@@ -64,7 +66,7 @@ body {
         position: fixed;
         top: 0;
         left: 0;
-        background: #ffffff;
+        background-color: map-get($map: $colors, $key: basic-white);
         display: none;
         z-index: 15;
 
